fix: date picker overflow 수정

--- a/src/app/study/studyModal/studySelect/index.scss
+++ b/src/app/study/studyModal/studySelect/index.scss
@@ -65,7 +65,6 @@
         display: flex !important;
         align-items: flex-end !important;
         justify-content: flex-end !important;
-        width: 40% !important;
     }
     &-date-picker{
         padding: .625rem !important;
